<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="8dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="8dp"
    tools:context="com.app.msc.gpsjournal.SplashActivity"
    android:background="@color/colorBackgroundSplash">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_splash_title"
        android:id="@+id/txt_title"
        android:textSize="60sp"
        android:textColor="@color/colorText"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" />


    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_create"
        android:longClickable="false"
        android:text="@string/btn_create"
        android:textColor="@color/colorText"
        android:textSize="30sp"
        style="@android:style/Widget.DeviceDefault.Button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_above="@+id/btn_saved"
        android:layout_alignParentStart="true"
        android:textStyle="bold" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_viewer"
        android:textColor="@color/colorText"
        android:id="@+id/btn_saved"
        android:textSize="30sp"
        style="@style/Base.Widget.AppCompat.Button"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:textStyle="bold"
        android:layout_marginTop="8dp" />
</RelativeLayout>
